@@ -20,18 +20,18 @@ import java.util.stream.Collectors;
 
 
 @RestController
-@SecurityRequirement(name="api")
+@SecurityRequirement(name = "api")
 @CrossOrigin("*")
 public class ProductAPI {
     @Autowired
-    ProductsRepository productsRepository ;
+    ProductsRepository productsRepository;
 
     @Autowired
     ProductServices productServices;
 
     @PreAuthorize("hasAuthority('ADMIN') or hasAuthority('MANAGER')")
     @PostMapping("products")
-    public ResponseEntity<?> creates (@RequestBody @Valid ProductsRequest productsRequest) {
+    public ResponseEntity<?> creates(@RequestBody @Valid ProductsRequest productsRequest) {
         try {
             Product product = productServices.creates(productsRequest);
             return ResponseEntity.ok(product);
@@ -39,6 +39,7 @@ public class ProductAPI {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
+
     @PreAuthorize("hasAuthority('ADMIN') or hasAuthority('MANAGER')")
     @DeleteMapping("/{barcode}")
     public ResponseEntity<Product> deleteProduct(@PathVariable String barcode) {
@@ -56,31 +57,16 @@ public class ProductAPI {
 
     @PreAuthorize("hasAuthority('ADMIN') or hasAuthority('MANAGER')")
     @PutMapping("/{barcode}")
-public ResponseEntity<?> updateOrCreateProduct(@PathVariable String barcode, @RequestBody @Valid ProductsRequest productsRequest) {
-    try {
-        Product updatedProduct = productServices.updateAndCreateNewProduct(barcode, productsRequest);
-        return ResponseEntity.ok(updatedProduct);
-    } catch (EntityNotFoundException e) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Product not found with barcode: " + barcode);
-    } catch (IllegalArgumentException e) {
-        return ResponseEntity.badRequest().body(e.getMessage());
+    public ResponseEntity<?> updateOrCreateProduct(@PathVariable String barcode, @RequestBody @Valid ProductsRequest productsRequest) {
+        try {
+            Product updatedProduct = productServices.updateAndCreateNewProduct(barcode, productsRequest);
+            return ResponseEntity.ok(updatedProduct);
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Product not found with barcode: " + barcode);
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
-}
-
-//@PreAuthorize("hasAuthority('ADMIN') or hasAuthority('MANAGER')")
-//@PutMapping("/update-product-buyback-to-sell{barcode}")
-//public ResponseEntity<?> updateOrCreateProductBuyBack(@PathVariable String barcode, @RequestBody @Valid ProductsRequest productsRequest) {
-//    try {
-//        Product updatedProduct = productServices.updateAndCreateNewProductBuyBack(barcode, productsRequest);
-//        return ResponseEntity.ok(updatedProduct);
-//    } catch (EntityNotFoundException e) {
-//        return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Product not found with barcode: " + barcode);
-//    } catch (IllegalArgumentException e) {
-//        return ResponseEntity.badRequest().body(e.getMessage());
-//    }
-//}
-
-//---------search--------------------------///
 
     @GetMapping("/products")
     public ResponseEntity<List<Product>> getAllProducts() {
@@ -88,20 +74,28 @@ public ResponseEntity<?> updateOrCreateProduct(@PathVariable String barcode, @Re
         return ResponseEntity.ok(products);
     }
 
-       @GetMapping("/products-true")
+    @GetMapping("/products-true")
     public ResponseEntity<List<Product>> getAllProductsTrue() {
         List<Product> products = productServices.getAllProductsTrue();
         return ResponseEntity.ok(products);
     }
 
-
-
-     @GetMapping("/{barcode}")
+     @GetMapping("/products/barcode/{barcode}")
     public ResponseEntity<?> getProductByBarcode(@PathVariable String barcode) {
         try {
             Product product = productServices.getProductByBarcode(barcode);
             return ResponseEntity.ok(product);
         } catch (ProductNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
+        }
+    }
+
+    @GetMapping("/products/id/{productId}")
+    public ResponseEntity<?> getProductById(@PathVariable("productId") Long productId) {
+        try {
+            Product product = productServices.getProductById(productId);
+            return ResponseEntity.ok(product);
+        } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
         }
     }
@@ -112,22 +106,21 @@ public ResponseEntity<?> updateOrCreateProduct(@PathVariable String barcode, @Re
         return ResponseEntity.ok(products);
     }
 
-
     @GetMapping("/search/min-max")
-public ResponseEntity<List<Product>> searchProductsByPriceRangeAndStatus(
-        @RequestParam("minPrice") double minPrice,
-        @RequestParam("maxPrice") double maxPrice) {
+    public ResponseEntity<List<Product>> searchProductsByPriceRangeAndStatus(
+            @RequestParam("minPrice") double minPrice,
+            @RequestParam("maxPrice") double maxPrice) {
 
-    List<Product> allProducts = productServices.getAllProducts(); // Lấy tất cả sản phẩm có status true
+        List<Product> allProducts = productServices.getAllProducts(); // Lấy tất cả sản phẩm có status true
 
-    // Tạo list mới chỉ chứa các sản phẩm có giá nằm trong khoảng minPrice đến maxPrice
-    List<Product> productsInPriceRange = allProducts.stream()
-            .filter(product -> product.getPrice() >= minPrice && product.getPrice() <= maxPrice)
-            .collect(Collectors .toList());
+        // Tạo list mới chỉ chứa các sản phẩm có giá nằm trong khoảng minPrice đến maxPrice
+        List<Product> productsInPriceRange = allProducts.stream()
+                .filter(product -> product.getPrice() >= minPrice && product.getPrice() <= maxPrice)
+                .collect(Collectors.toList());
 
-    // Trả về danh sách sản phẩm nằm trong khoảng giá minPrice đến maxPrice cho client
-    return ResponseEntity.ok(productsInPriceRange);
-}
+        // Trả về danh sách sản phẩm nằm trong khoảng giá minPrice đến maxPrice cho client
+        return ResponseEntity.ok(productsInPriceRange);
+    }
 
     @GetMapping("/search/gemstone")
     public ResponseEntity<List<Product>> searchProductsByGemstoneAttributes(
@@ -140,22 +133,9 @@ public ResponseEntity<List<Product>> searchProductsByPriceRangeAndStatus(
         return ResponseEntity.ok(products);
     }
 
-     // Tìm kiếm sản phẩm theo metal type
     @GetMapping("/search/metaltype")
     public ResponseEntity<List<Product>> searchProductsByMetalType(@RequestParam String metalType) {
         List<Product> products = productServices.searchProductsByMetalType(metalType);
         return ResponseEntity.ok(products);
     }
-
-      @GetMapping("/{productId}")
-    public ResponseEntity<?> getProductById(@PathVariable("productId") Long productId) {
-        try {
-            Product product = productServices.getProductById(productId);
-            return ResponseEntity.ok(product);
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        }
-    }
-
-
 }
